--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#redirect-handler-page {
+  background-color: #2a1943;
+  background-image: radial-gradient(circle at 100% 0, #2545d3ad, #fff0), radial-gradient(circle at 0 100%, #9d72ff52, #fff0 17%);
+}
