--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,28 @@ code {
     monospace;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* background: #f1f1f1; */
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 #root {
   background-color: #2a1943;
   background-image: radial-gradient(circle at 100% 0, #2545d3ad, #fff0), radial-gradient(circle at 0 100%, #9d72ff52, #fff0 17%);
